# iai_naive_object_db

./: CMakeLists.txt  README.md  package.xml
include/iai_naive_object_db/: iai_naive_object_db.hpp  iai_naive_object_db_client.hpp  iai_naive_object_db_node.hpp
launch/: simple_test.launch
msg/: Object.msg  Visual.msg
src/iai_naive_object_db/: iai_naive_object_db_client_main.cpp  iai_naive_object_db_main.cpp
srv/: ObjectArray.srv
test/: main.cpp
test/iai_naive_object_db/: iai_naive_object_db.cpp
